--- a/composer.json
+++ b/composer.json
@@ -3,23 +3,28 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
         "cheesegrits/filament-google-maps": "*",
         "filament/filament": "^4.0",
-        "filament/spatie-laravel-settings-plugin": "^4.0@beta",
+        "filament/spatie-laravel-settings-plugin": "^4.0",
         "intervention/image": "^3.11",
         "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "laravellegends/pt-br-validator": "^12.2",
+        "predis/predis": "^3.2",
         "spatie/laravel-image-optimizer": "^1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "filament/upgrade": "^4.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
