--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "laravel/tinker": "^2.10.1",
         "laravellegends/pt-br-validator": "^12.2",
         "predis/predis": "^3.2",
-        "spatie/laravel-image-optimizer": "^1.8"
+        "spatie/laravel-image-optimizer": "^1.8",
+        "symfony/http-client": "^7.3",
+        "symfony/mailgun-mailer": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
